--- a/platformio.ini
+++ b/platformio.ini
@@ -6,11 +6,9 @@
 ;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
-[env:nanoatmega328new]
-platform = atmelavr
-board = nanoatmega328new
+; https://docs.platformio.org/page/projectconf.html 
+[env:seeed_xiao]
+platform = atmelsam
+board = seeed_xiao
 framework = arduino
-upload_port = COM11
 lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
