--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328new]
-platform = atmelavr
-board = nanoatmega328new
+[env:seeed_xiao]
+platform = atmelsam
+board = seeed_xiao
 framework = arduino
 upload_port = COM11
-lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
+lib_deps = olikraus/U8g2@^2.28.8
