--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = atmelsam
 board = seeed_xiao
 framework = arduino
 upload_port = COM12
-lib_deps = olikraus/U8g2@^2.28.8
+lib_deps = 
+	olikraus/U8g2@^2.28.8
+	fastled/FastLED@^3.4.0
